--- a/elvis.config
+++ b/elvis.config
@@ -7,7 +7,7 @@
                 dirs => ["src/models", "src"],
                 filter => ["*.erl"],
                 rules => [
-                    {elvis_style, line_length, #{limit => 110}},
+                    {elvis_text_style, line_length, #{limit => 110}},
                     {elvis_style, nesting_level, #{level => 6}},
                     {elvis_style, used_ignored_variable, disable},
                     {elvis_style, no_spec_with_records, disable},
